--- a/workflow-ui/webContent/view/allTasks.xhtml
+++ b/workflow-ui/webContent/view/allTasks.xhtml
@@ -7,8 +7,12 @@
     <ui:define name="content">
     <f:event type="preRenderView" listener="#{tasksBean.checkIfLoggedIn}" />
     <h:form id="tasksForm" style="margin-top: 20px">
-      <h:outputText value="All Tasks" style="font-size:16pt; font-weight:bold" />
-      <ui:include src="/includes/components/tasksTable.xhtml" />
+      <h:panelGroup styleClass="card card-w-title task-detail-container case-details-item" layout="block">
+        <div class="table-title-switch">
+          <h:outputText value="All Tasks" style="font-size:16pt; font-weight:bold" />
+        </div>
+        <ui:include src="/includes/components/tasksTable.xhtml" />
+      </h:panelGroup>
     </h:form>
     </ui:define>
   </ui:composition>
