--- a/workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/workflow-ui/webContent/resources/css/workflow-ui.css
@@ -1,108 +1,229 @@
 .table-icon {
-    position: relative;
-    top: 3px;
-    font-size: 17px !important;
-    margin-right: 5px;
+  position: relative;
+  top: 3px;
+  font-size: 17px !important;
+  margin-right: 5px;
 }
 
 .icon-row {
-    width: 40px;
-    padding: 0px;
-    text-align: center;
+  width: 40px;
+  padding: 0px;
+  text-align: center;
+}
+
+.detail-action-icon {
+  margin-left: 4px;
+}
+
+.detail-action-icon-bold {
+  font-weight: bold;
+  margin-left: 4px;
 }
 
 .ui-datatable .ui-column-filter {
-    display: none;
+  display: none;
 }
 
 .task-detail-title {
-    position: relative;
-    margin-bottom: 14px;
-    font-weight: bold;
+  position: relative;
+  margin-bottom: 14px;
+  font-weight: bold;
 }
 
 .task-detail-action-container {
-    position: absolute;
-    top: -2px;
-    right: 0px;
+  position: absolute;
+  top: -2px;
+  right: 0px;
 }
 
 .task-detail-container {
-    min-height: 320px;
+  min-height: 220px;
 }
 
 .action-container {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .task-action-item {
-    margin: auto 7px;
+  margin: auto 7px;
 }
 
 .task-actions-link {
-    margin: auto 10px;
-    font-weight: normal;
+  margin: auto 10px;
+  font-weight: normal;
 }
 
 .straight-text-icon {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .no-padding-left {
-    padding-left: 0px !important;
+  padding-left: 0px !important;
+}
+
+.u-padding-0 {
+  padding: 0;
+}
+
+.case-details-grid .ui-panelgrid-content .ui-g .ui-panelgrid-cell {
+  padding: 8px;
+}
+
+.case-related-task-table {
+  margin-bottom: 8px;
+}
+
+.case-related-task-case-running .ui-datascroller-loader {
+  padding: 0px 10px;
+}
+
+.case-details-item .ui-datascroller-content.ui-widget-content.ui-corner-all {
+  padding: 0;
+  border: none;
+}
+
+.case-related-running {
+  line-height: 2.2rem;
+}
+
+.case-map-element {
+  height: 100%;
+}
+
+.case-map-icon-container {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: silver;
+  border-radius: 3px;
+  margin-bottom: 10px;
+}
+
+.case-map-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.case-map-icon {
+  color: white;
+  font-size: 16pt;
+}
+
+.case-map-column {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.case-column-details {
+  border: 1px solid silver;
+  box-shadow: 3px 3px 4px silver;
+  padding: 0px;
+}
+
+.case-column-details-top {
+  background: silver;
+  padding: 10px;
+  color: white;
+}
+
+.detail-title-icon {
+  padding-right: 6px;
+}
+
+.related-task-content {
+  line-height: 2rem;
+}
+
+.related-task-content, .case-related-running {
+  padding: 5px 10px;
+  border: 1px solid hsl(180, 1%, 85%);
+}
+
+.related-task-list-item-status {
+  margin-right: 5px;
+  display: block;
+}
+
+.related-element {
+  margin-bottom: 10px;
+}
+
+.table-title-switch {
+  display: flex;
+  justify-content: space-between;
 }
 
 .ui-paginator .ui-paginator-rpp-options {
-    padding: 0 1.4em 0 0.5em;
-    border: 1px solid #aaa;
-    border-radius: .5em;
-    -moz-appearance: none;
-    -webkit-appearance: none;
-    appearance: none;
-    background-color: #fff;
-    background-image:
-        url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
-        linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
-    background-repeat: no-repeat, repeat;
-    background-position: right .6em top 50%, 0 0;
-    background-size: .65em auto, 100%;
+  padding: 0 1.4em 0 0.5em;
+  border: 1px solid #aaa;
+  border-radius: .5em;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  background-image:
+    url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+    linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
+  background-repeat: no-repeat, repeat;
+  background-position: right .6em top 50%, 0 0;
+  background-size: .65em auto, 100%;
 }
 
 .starts-project-name {
-    color: #343232;
-    font-weight: 700;
-    margin-left: 6px;
+  color: #343232;
+  font-weight: 700;
+  margin-left: 6px;
 }
 
 .starts-header-title {
-    font-weight: bold;
-    font-size: 16pt;
+  font-weight: bold;
+  font-size: 16pt;
 }
 
 .ui-accordion-content .start-element:hover {
-    cursor: pointer;
-    background-color: #afced8;
-}
-
-.starts-form {
-    margin-top: 20px;
+  cursor: pointer;
+  background-color: #afced8;
 }
 
 .main-starts-container {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .main-starts-container>div.ui-panel-content {
-    padding: 0px;
+  padding: 0px;
 }
 
 .main-starts-container>div.ui-panel-content * {
-    border: 0px;
+  border: 0px;
 }
 
 .flex-space {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+}
+
+.task-state-open {
+  color: var(--primary-color);
+}
+
+.task-state-done, .case-state-done {
+  color: green;
+}
+
+.task-state-reserved, .task-state-system {
+  color: black;
+}
+
+.task-state-zombie-destroyed, .task-state-failed,
+  .case-state-zombie-destroyed {
+  color: red;
+}
+
+.task-state-waiting, .task-state-in-progress, .case-state-in-progress {
+  color: goldenrod;
 }
