--- a/workflow-ui/webContent/view/starts.xhtml
+++ b/workflow-ui/webContent/view/starts.xhtml
@@ -7,8 +7,8 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
       <h:form id="startsForm">
-      <h:panelGroup styleClass="card card-w-title task-detail-container case-details-item" layout="block">
-        <h:outputText value="Starts" styleClass="starts-header-title" />
+      <h:panelGroup styleClass="card card-w-title task-detail-container" layout="block">
+        <h:outputText value="Starts" styleClass="card-header-title" />
         <p:panel id="main-starts-container" styleClass="main-starts-container">
           <f:facet name="header">
             <p:outputPanel>
