--- a/workflow-ui/webContent/includes/components/userTable.xhtml
+++ b/workflow-ui/webContent/includes/components/userTable.xhtml
@@ -2,8 +2,8 @@
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
-  <h:form id="loginTable" style="margin-top: 20px">
-    <h:panelGroup styleClass="card card-w-title task-detail-container case-details-item"
+  <h:form id="loginTable">
+    <h:panelGroup styleClass="card card-w-title task-detail-container"
       layout="block">
       <h:outputText value="Login Table" style="font-size:16pt; font-weight:bold" />
       <br />
