--- a/workflow-ui/webContent/view/cases.xhtml
+++ b/workflow-ui/webContent/view/cases.xhtml
@@ -6,15 +6,16 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
     <f:event type="preRenderView" listener="#{tasksBean.checkIfLoggedIn}" />
-    <h:form id="casesForm" style="margin-top: 20px">
-      <h:panelGroup styleClass="card card-w-title task-detail-container case-details-item" layout="block">
+    <h:form id="casesForm">
+      <h:panelGroup styleClass="card card-w-title task-detail-container" layout="block">
         <div class="table-title-switch">
-          <h:outputText value="Cases" style="font-size:16pt; font-weight:bold" />
-          <h:panelGroup style="display: flex; align-items: center;" layout="block" rendered="#{adminBean.isWorkflowAdmin()}">
-            <h:outputText value="All Cases" style="margin-right: 10px"/>
-            <p:toggleSwitch value="#{casesBean.casesDataModel.showAllCases}">
+          <h:outputText value="Cases" class="card-header-title"/>
+          <h:panelGroup class="action-container" layout="block" rendered="#{adminBean.isWorkflowAdmin()}">
+            <h:outputText value="All Cases" class="margin-right-10"/>
+            <p:toggleSwitch id="allCasesSwitch" value="#{casesBean.casesDataModel.showAllCases}">
               <p:ajax update="casesForm"/>
             </p:toggleSwitch>
+            <p:tooltip for="allCasesSwitch" position="top" value="If disabled shows only cases where user is involved"/>
           </h:panelGroup>
         </div>
         <ui:include src="/includes/components/casesTable.xhtml" />
