--- a/workflow-ui/webContent/view/tasks.xhtml
+++ b/workflow-ui/webContent/view/tasks.xhtml
@@ -6,8 +6,8 @@
   <ui:composition template="../includes/template/template.xhtml">
     <ui:define name="content">
     <f:event type="preRenderView" listener="#{tasksBean.checkIfLoggedIn}" />
-    <h:form id="tasksForm" style="margin-top: 20px">
-      <h:panelGroup styleClass="card card-w-title task-detail-container case-details-item" layout="block">
+    <h:form id="tasksForm">
+      <h:panelGroup styleClass="card card-w-title task-detail-container" layout="block">
         <div class="table-title-switch">
           <h:outputText value="Tasks" style="font-size:16pt; font-weight:bold" />
         </div>
