--- a/workflow-ui/webContent/view/caseDetails.xhtml
+++ b/workflow-ui/webContent/view/caseDetails.xhtml
@@ -68,7 +68,7 @@
             <ui:include src="/includes/components/caseDetails/customFields.xhtml" />
           </h:panelGroup>
 
-          <h:panelGroup styleClass="card card-w-title case-detail-card task-detail-container case-details-item"
+          <h:panelGroup id="documentsContainer" styleClass="card card-w-title case-detail-card task-detail-container case-details-item"
             layout="block">
             <h:panelGroup layout="block" styleClass="task-detail-title straight-text-icon related-element">
               <i class="si si-lg si-office-file-doc-1 detail-title-icon" />
