--- a/workflow-ui/webContent/includes/components/caseDetails/documents.xhtml
+++ b/workflow-ui/webContent/includes/components/caseDetails/documents.xhtml
@@ -3,12 +3,15 @@
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
 
-  <ui:repeat var="document" value="#{casesDetailsBean.selectedCase.documents().getAll()}" varStatus="loop">
-    <h:commandLink value="#{document.getName()}">
-      <p:fileDownload value="#{casesDetailsBean.getDocumentFile(document.getPath())}"></p:fileDownload>
-    </h:commandLink>
-    <c:if test="#{!loop.last}">, </c:if>
-  </ui:repeat>
+  <ul>
+    <ui:repeat var="document" value="#{casesDetailsBean.caseDocuments}">
+      <li>
+        <h:commandLink value="#{document.getName()}">
+          <p:fileDownload value="#{casesDetailsBean.getDocumentFile(document.getPath())}"></p:fileDownload>
+        </h:commandLink>
+      </li>
+    </ui:repeat>
+  </ul>
   <c:if test="#{empty casesDetailsBean.selectedCase.documents().getAll()}">
     <h:outputText value="No Documents found" />
   </c:if>
