--- a/workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/workflow-ui/webContent/resources/css/workflow-ui.css
@@ -19,6 +19,10 @@
   margin-right: 10px;
 }
 
+.margin-right-5 {
+  margin-right: 5px;
+}
+
 .detail-action-icon-bold {
   font-weight: bold;
   margin-left: 4px;
