XIVY-5540 Rebrand to Axon Ivy

--- a/workflow-ui/webContent/includes/template/sidebar.xhtml
+++ b/workflow-ui/webContent/includes/template/sidebar.xhtml
@@ -3,7 +3,7 @@
   xmlns:pm="http://primefaces.org/serenity-ivy">
   <div class="layout-sidebar">
     <div class="sidebar-logo">
-      <a href="/"> <img src="#{resource['images/axon_ivy_logo_white.svg']}" alt="Axon.ivy" />
+      <a href="/"> <img src="#{resource['images/axon_ivy_logo_white.svg']}" alt="Axon Ivy" />
       </a>
     </div>
     <div class="nano container has-scrollbar">
