--- a/workflow-ui/webContent/includes/template/topbar.xhtml
+++ b/workflow-ui/webContent/includes/template/topbar.xhtml
@@ -4,7 +4,7 @@
   <div class="layout-topbar" style="padding-right: 24px;">
     <div class="container">
       <a class="topbar-logo" href="/">
-        <h:graphicImage name="resources/images/axon_ivy_logo_white.svg" alt="Axon.ivy" />
+        <h:graphicImage name="resources/images/axon_ivy_logo_white.svg" alt="Axon Ivy" />
       </a>
     </div>
     <div class="layout-topbar-menu-wrapper">
