Add cleanup page

--- a/workflow-ui/webContent/includes/template/sidebar.xhtml
+++ b/workflow-ui/webContent/includes/template/sidebar.xhtml
@@ -20,7 +20,7 @@
               <p:submenu id="sr_actions" label="Actions" icon="si si-tools-wench">
                 <p:menuitem id="sr_signals" value="Signals" icon="si si-network-signal" url="#" />
                 <p:menuitem id="sr_intermediate_events" value="Intermediate Events" icon="si si-analytics-graph" url="#" />
-                <p:menuitem id="sr_cleanup" value="Cleanup" icon="si si-delete" url="#" />
+                <p:menuitem id="sr_cleanup" value="Cleanup" icon="si si-delete" url="cleanup.xhtml" />
               </p:submenu>
             </pm:menu>
           </h:form>
